--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -99,7 +99,7 @@ $grid-row-columns:            6;
 //
 // Define common padding and border radius sizes and more.
 
-$border-color:                $gray-200;
+$border-color:                $gray-300;
 
 // Typography
 //
@@ -145,7 +145,7 @@ $navbar-light-active-color:         $primary;
 
 // Cards
 
-$card-border-color:                 $gray-200;
+$card-border-color:                 $gray-300;
 
 // Alerts
 //
