--- a/assets/scss/layouts/_sidebar.scss
+++ b/assets/scss/layouts/_sidebar.scss
@@ -52,7 +52,7 @@
 }
 
 .docs-links h3:not(:first-child) {
-  border-top: 1px solid $gray-200;
+  border-top: 1px solid $gray-300;
 }
 
 a.docs-link {
@@ -75,7 +75,7 @@ a.docs-link {
 }
 
 .page-links li:not(:first-child) {
-  border-top: 1px dashed $gray-200;
+  border-top: 1px dashed $gray-300;
 }
 
 .page-links a {
